--- a/_includes/author-bio.html
+++ b/_includes/author-bio.html
@@ -25,4 +25,4 @@
 
 {% if site.owner.Bilibili %}<p style="text-indent:0;"><a href="https://bilibili.com/{{ site.owner.bilibili }}"><i class="icon-bilibili"></i> Bilibili</a></p>{% endif %} 
 
-{% if site.owner.orcid %}<p style="text-indent:0;"><a href="https://orcid.org/my-orcid?orcid={{ site.owner.orcid }}"></i> orcid</a></p>{% endif %} 
+{% if site.owner.orcid %}<p style="text-indent:0;">orcid{{ site.owner.orcid }}</a></p>{% endif %} 
